[package]
name = "wasm-twitter-card"
version = "0.2.0"
authors = ["Alessia Bellisario <alessia@bellisar.io>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2"
footile = "0.3.1"
rusttype = "0.8.2"
image = { version = "0.22", default-features = false, features = ["png_codec"] }
serde-wasm-bindgen = "0.1.3"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.1", optional = true }

# `wee_alloc` is a tiny allocator for wasm that is only ~1K in code size
# compared to the default allocator's ~10K. It is slower than the default
# allocator, however.
#
# Unfortunately, `wee_alloc` requires nightly Rust when targeting wasm for now.
wee_alloc = { version = "0.4.2", optional = true }

[dependencies.fonterator]
version = "0.5.1"
features = [
  'normal-font'
]

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Node',
]

[dev-dependencies]
wasm-bindgen-test = "0.2"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
